# data/model/policy_type.py
@@ -1,0 +1,8 @@
+import enum
+
+
+class PolicyType(enum.Enum):
+    FACTORY_MODERNIZATION = "FACTORY_MODERNIZATION"
+    LABOUR_SUBSIDIES = "LABOUR_SUBSIDIES"
+    GYM_IMPROVEMENT = "GYM_IMPROVEMENT"
+    PENSION_SCHEME = "PENSION_SCHEME"
